# kafka_app_template

./: .gitignore  Dockerfile  README.md  pyproject.toml
conf/: config.yaml
conf/kafka/: kafka.yaml
kafka_app_template/: common.py  core.py  entry.py  kafka_util.py
kafka_app_template/protobuf/: my_message.proto  my_message_pb2.py  my_result_message.proto  my_result_message_pb2.py
